2024-04-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 0.92

	* hook.C: Packaging improvements. Going forward the vera Slackware
	package can be upgraded without manually reverting to sysvinit,
	first.

2024-04-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* verac_check_hook.c (check_hookfile): Sync the filesystems
	before running sysinit.

2024-04-01  Sam Varshavchik  <mrsam@courier-mta.com>

	* Transparent integration with /etc/rc.d/rc.M. The "enable" and
	"disable" commands for containers that correspond to /etc/rc.d/rc.*
	scripts automatically update the scripts' execute permissions.

2024-03-31  Sam Varshavchik  <mrsam@courier-mta.com>

	* "status" command: move more pid-related logic to the requesting
	process, out of pid 1. Various fixes.

	* Fix race condition if a container happens to stop during a re-exec.

2024-03-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 0.91

	* Log runlevel switches, including startup/shutdown.

2024-03-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 0.90

	* When running start/stop/reload/restart, copy the output
	from the container to the requester's shell's standard output.

2024-03-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* vera.C (dump_terse): "state" maybe affixed by "(manual)", so put
	it in quotes.

	* inittab.C: Improve converted unit descriptions

	* proc_container_group.C: fix duplicated output to due unflushed
	buffer, oops.

	* Fix double invocation of rc.local_shutdown.

2024-03-02  Sam Varshavchik  <mrsam@courier-mta.com>

	* inittab.C: Modify invocation of /etc/rc.d/rc.inet2 from
	/etc/rc.d/rc.M, to modify the former on the fly, before running
	it, in order to start each service from rc.inet2 in its own container.
	Fix stopping depedencies of all rc.M and rc.inet2 units.

	* Don't create an open file descriptor for every container's
	cgroup.eventsfd. Open it only when needed.

2024-03-01  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 0.02
